--- a/estilo/style.css
+++ b/estilo/style.css
@@ -52,3 +52,15 @@ a{
     font-style: italic;
     color: blue;
 }
+
+.c{
+    color: grey;
+}
+
+.a{
+    color: blue;
+}
+
+.s{
+    text-decoration: underline;
+}
